--- a/data/db/default_auto_params.ini
+++ b/data/db/default_auto_params.ini
@@ -16,4 +16,4 @@ interval_auto_weather = 1
 # how many hours into the future
 length_auto_weather = 6
 # cities
-cities_auto_weather = Sibu, Kota Samarahan
+cities_auto_weather = New York, London
