Fixed errors and bugs
Fixed issue:
- The auto IP logging and weather forecast still follow the old settings even though the auto_params.ini has been modified via commands.
- Changed "length_auto_weather" to "future_auto_weather" for better intuition.
- A requirements.py is added for ease of installing necessary packages.
- Fixed other bugs and errors

--- a/data/db/default_auto_params.ini
+++ b/data/db/default_auto_params.ini
@@ -14,6 +14,6 @@ hours_auto_weather = "6,12,20"
 # interval
 interval_auto_weather = 1
 # how many hours into the future
-length_auto_weather = 6
+future_auto_weather = 6
 # cities
 cities_auto_weather = New York, London
